# CoderVPS

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  cdev  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: generate.yml
codervps/: catalog.py  cli.py  config.py  discovery.py  languages.py  models.py  plugin_api.py
codervps/plugins/: __init__.py  cpp.py  go.py  python.py  rust.py
codervps/render/: docker.py  extensions.py  generated.py  template.py
config/: extensions.toml  toolchains.toml
docker/: Dockerfile
docs/: catalog-discovery.md  deployment-guide.md  generated-branch.md  vsix.md
extensions/extensions/: README.md  core.txt  cpp.txt  go.txt  python.txt
runtime/: startup.sh
runtime/lib/: actions.sh  run_actions.py
runtime/plugins/: rust.sh
templates/devbox/: Dockerfile  Dockerfile.bak.2026-05-10-080414  Dockerfile.bak.2026-05-10-084536  Dockerfile.bak.2026-05-10-084927  Dockerfile.bak.2026-05-10-085646  Dockerfile.bak.2026-05-10-085746  Dockerfile.bak.20260510-080120  main.tf  main.tf.bak.2026-05-10-083651  main.tf.bak.2026-05-10-091223  main.tf.bak.2026-05-10-092410  main.tf.bak.2026-05-10-093415  main.tf.bak.2026-05-10-102611  main.tf.bak.2026-05-10-102635  startup.sh  startup.sh.bak.2026-05-10-093442  (+1 more)
tests/: test_catalog.py  test_cli.py  test_config.py  test_docker_renderer.py  test_extensions_renderer.py  test_generated_tree.py  test_models.py  test_plugins.py  test_runtime_static.py  test_taskd_detailed.py  test_taskd_integrity.py  test_template_hcl_renderer.py  test_template_renderer.py  test_workflow_static.py
(+29 files in other folders)
