[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codervps"
version = "0.1.0"
description = "Pluginized generator and runtime assets for CoderVPS workspaces"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
codervps = "codervps.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
